# ai_assistant

./: .env.example  .env.template  .env.test.template  .gitattributes  .gitignore  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  readme_develop.md
admin/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
admin/src/router/: index.ts
admin/src/views/: HomeView.vue
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cc054bc7fb0f_initial.py
backend/app/: main.py  worker.py
backend/app/api/: __init__.py
backend/app/api/middleware/: trace_id.py
backend/app/core/: config.py  database.py  logging.py  qdrant.py  redis.py  security.py  seed.py  storage.py
backend/app/core/models/: __init__.py  audit_log.py  chat_history.py  document.py  embedding_metadata.py  llm_provider_key.py  refresh_token.py  system_settings.py  user.py  user_external_account.py
backend/app/crud/: __init__.py  refresh_token.py
backend/tests/: conftest.py  factories.py  fixtures.py
backend/tests/api/: conftest.py  test_health.py
backend/tests/integration/: __init__.py  conftest.py  test_crud_refresh_token.py
backend/tests/unit/: __init__.py  test_security.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/views/: HomeView.vue
grafana/dashboards/: ai_assistant.json
messengers/: .dockerignore  Dockerfile  pyproject.toml
messengers/app/: main.py
nginx/: nginx.conf  nginx.dev.conf
prometheus/: prometheus.yml
